fix a production bug of intro card overflowing

--- a/src/app/styles/intro.module.css
+++ b/src/app/styles/intro.module.css
@@ -2,7 +2,6 @@
     grid-area: intro;
     width: 100%;
     height: 100%;
-    max-height: 336px;
     background-color: var(--grid-item-bg);
     border-radius: 1.5rem;
 }
